--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -1,110 +1,139 @@
 {
-  "metadata": {
-    "language_info": {
-      "codemirror_mode": {
-        "name": "python",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.8"
-    },
-    "kernelspec": {
-      "name": "python",
-      "display_name": "Pyolite",
-      "language": "python"
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Science Tools and Ecosystem"
+   ]
   },
-  "nbformat_minor": 4,
-  "nbformat": 4,
-  "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this notebook, Data Science Tools and Ecosystem are summarized."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some of the popular languages that Data Scientists use are:\n",
+    "1. Python\n",
+    "2. R\n",
+    "3. SQL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "Some of the commonly used libraries used by Data Scientists include:\n",
+    "1. Pandas\n",
+    "2. NumPy\n",
+    "3. Matplotlib"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Data Science Tools |\n",
+    "| -------------|\n",
+    "| MongoDB |\n",
+    "| Apache SparkSQL |\n",
+    "| TensorFlow |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Below are a few examples of evaluating arithmetic expressions in Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
     {
-      "cell_type": "markdown",
-      "source": "# Data Science Tools and Ecosystem",
-      "metadata": {}
-    },
-    {
-      "cell_type": "markdown",
-      "source": "In this notebook, Data Science Tools and Ecosystem are summarized.",
-      "metadata": {}
-    },
-    {
-      "cell_type": "markdown",
-      "source": "Some of the popular languages that Data Scientists use are:\n1. Python\n2. R\n3. SQL",
-      "metadata": {}
-    },
-    {
-      "cell_type": "markdown",
-      "source": "Some of the commonly used libraries used by Data Scientists include:\n1. Pandas\n2. NumPy\n3. Matplotlib",
-      "metadata": {
-        "tags": []
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": "| Data Science Tools |\n| -------------|\n| MongoDB |\n| Apache SparkSQL |\n| TensorFlow |",
-      "metadata": {}
-    },
-    {
-      "cell_type": "markdown",
-      "source": "### Below are a few examples of evaluating arithmetic expressions in Python",
-      "metadata": {}
-    },
-    {
-      "cell_type": "code",
-      "source": "## This a simple arithmetic expression to mutiply then add integers\n(3*4)+5",
-      "metadata": {
-        "trusted": true
-      },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "execution_count": 9,
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "17"
-          },
-          "metadata": {}
-        }
+     "data": {
+      "text/plain": [
+       "17"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": "## This will convert 200 minutes to hours by diving by 60\n200/60",
-      "metadata": {
-        "trusted": true
-      },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "execution_count": 10,
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "3.3333333333333335"
-          },
-          "metadata": {}
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": "**Objectives:**\n- Python\n- R\n- SQL",
-      "metadata": {}
-    },
-    {
-      "cell_type": "markdown",
-      "source": "## Author\nThichPV",
-      "metadata": {}
-    },
-    {
-      "cell_type": "code",
-      "source": "",
-      "metadata": {},
-      "execution_count": null,
-      "outputs": []
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-  ]
+   ],
+   "source": [
+    "## This a simple arithmetic expression to mutiply then add integers\n",
+    "(3*4)+5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.3333333333333335"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## This will convert 200 minutes to hours by diving by 60\n",
+    "200/60"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Objectives:**\n",
+    "- Python\n",
+    "- R\n",
+    "- SQL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Author\n",
+    "S Venkatesh"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
